--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,59 +1,16 @@
-name: Build and Release
-
-on:
-  push:
-    tags:
-      - 'v*'
-
+name: Build and release
+on: 
+  release:
+    types: [published]
 jobs:
   build:
-    name: Build Binaries
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        os: [linux, windows, darwin]
-        arch: [amd64, arm64, 386]
-        exclude:
-          - os: darwin
-            arch: 386
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
         with:
-          go-version: 1.20
-
-      - name: Build Binary
-        run: |
-          mkdir -p dist
-          GOOS=${{ matrix.os }} GOARCH=${{ matrix.arch }} go build -o dist/netinfo_exporter-${{ matrix.os }}-${{ matrix.arch }}
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: netinfo_exporter-${{ matrix.os }}-${{ matrix.arch }}
-          path: dist/netinfo_exporter-${{ matrix.os }}-${{ matrix.arch }}
-
-  release:
-    name: Create GitHub Release
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-        with:
-          path: dist
-
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: dist/*
+          go-version: 1.23
+      - run: make -j upload
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_RELEASE_UPLOAD_URL: ${{ github.event.release.upload_url }}
