--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,26 @@
-name: Build and test
-on: [push]
 jobs:
-  build:
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v2
-      with:
-        go-version: 1.23
-    - uses: actions/checkout@v2
-    - run: make -j all
-    - run: make -j test
+        - name: Checkout
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+
+        - name: Set up Go
+          uses: actions/setup-go@v4
+
+        - name: Run GoReleaser
+          uses: goreleaser/goreleaser-action@v5
+          with:
+            distribution: goreleaser
+            version: latest
+            args: release --clean
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+        - name: Upload binaries
+          uses: actions/upload-artifact@v4
+          with:
+            name: binaries
+            path: dist
