--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,9 @@ jobs:
           uses: actions/setup-go@v4
 
         - name: Run GoReleaser
-          uses: goreleaser/goreleaser-action@v5
+          uses: goreleaser/goreleaser-action@v6
           with:
-            distribution: goreleaser
-            version: latest
+            version: '~> v2'
             args: release --clean
           env:
             GITHUB_TOKEN: ${{ secrets.GH_PAT }}
